# rss2email

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  bootstrap  command_add.go  command_create_database.go  command_list.go  command_remove.go  command_run.go  config.go  database.go  database_test.go  main.go
src/: config.rs  error.rs  feed.rs  key_value.rs  log.rs  main.rs  model.rs
